# niuma

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  README.zh-CN.md
design/: codex_mobile_channel_system_design.md  implementation_audit.md  niuma_desktop_agent_detailed_design.md  niuma_ios_detailed_design.md  niuma_server_detailed_design.md
docs/adr/: 0001-pairing-protocol-owns-key-exchange.md  0002-rust-server-replaces-fastapi.md  0003-apns-progress-notifications-are-encrypted-wakeups.md
niuma-cli/: Cargo.toml  LICENSE  README.md  README.zh-CN.md
niuma-cli/src/: bindings.rs  cli.rs  codex.rs  codex_app_server.rs  codex_projection.rs  config.rs  crypto.rs  diff_summary.rs  file_access.rs  gateway.rs  identity.rs  logging.rs  main.rs  metadata.rs  pairing.rs  paths.rs  process_summary.rs  realtime.rs  server.rs  service.rs  status.rs  tasks.rs  thread_status.rs  transfers.rs
niuma-cli/static/: dashboard.css  dashboard.html  dashboard.js
niuma-ios/: README.md
niuma-ios/niuma/: LaunchScreen.storyboard
niuma-ios/niuma.xcodeproj/: project.pbxproj
niuma-ios/niuma/App/: AppContainer.swift  AppModel+Connection.swift  AppModel+Pairing.swift  AppModel+Persistence.swift  AppModel+Preferences.swift  AppModel+Projections.swift  AppModel+PushNotifications.swift  AppModel+Responses.swift  AppModel+TaskSending.swift  AppModel+ThreadRefresh.swift  AppModel+TransientEntries.swift  AppModel.swift  AppModelSupport.swift  AppView.swift  NiumaApp.swift  PushNotificationCoordinator.swift
niuma-ios/niuma/Assets.xcassets/AppIcon.appiconset/: Contents.json
niuma-ios/niuma/Assets.xcassets/LaunchGradientBackground.imageset/: Contents.json
niuma-ios/niuma/Assets.xcassets/NiumaLogo.imageset/: Contents.json
niuma-ios/niuma/Resources/: Localizable.xcstrings
niuma-server/: .gitignore  Cargo.toml  README.md
niuma-server/deploy/: deploy.sh  niuma-server.service
niuma-server/src/: apns.rs  config.rs  crypto.rs  db.rs  error.rs  hub.rs  logging.rs  main.rs  models.rs  routes.rs  transfer.rs
(+40 files in other folders)
